--- a/apps/web/components/renderer/Renderer.module.css
+++ b/apps/web/components/renderer/Renderer.module.css
@@ -1,5 +1,13 @@
 .renderer {
-    width: 100%;
-    height: 100%;
-    background-color: red;
+  width: 100%;
+  height: 100%;
+
+  position: relative;
+}
+
+.cssOutput,
+.webglOutput {
+  position: absolute;
+  top: 0;
+  left: 0;
 }
