Use a new placeholder domain for development

--- a/apps/desktop/styles/Home.module.css
+++ b/apps/desktop/styles/Home.module.css
@@ -1,8 +1,10 @@
 .main {
-  display: flex;
-  flex-direction: column;
-  justify-content: space-between;
-  align-items: center;
-  padding: 6rem;
-  min-height: 100vh;
+  width: 100%;
+}
+
+.main img {  
+  width: 100vw;
+  height: 100vh;
+  object-fit: contain;
+  display: block;
 }
