Reworked the user input for the mouse

--- a/apps/web/components/renderer/Renderer.module.css
+++ b/apps/web/components/renderer/Renderer.module.css
@@ -6,9 +6,15 @@
 }
 
 .cssOutput,
-.webglOutput {
+.webglOutput,
+.hoverEffects {
   position: absolute;
   user-select: none;
   top: 0;
   left: 0;
+}
+
+.hoverEffects {
+  width: 100%;
+  height: 100%;
 }
