very basic version of the window manager

--- a/apps/desktop/styles/globals.css
+++ b/apps/desktop/styles/globals.css
@@ -1,7 +1,6 @@
 html, body {
   padding: 0;
   margin: 0;
-  width: 100vw;
-  height: 100vh;
-  background-color: #000;
+
+  box-sizing: border-box;
 }
