--- a/apps/desktop/styles/WindowContainer.module.css
+++ b/apps/desktop/styles/WindowContainer.module.css
@@ -1,4 +1,5 @@
-.resizable {
+.container {
+  position: relative;
   display: block;
   width: 100%;
   height: 100%;
@@ -7,12 +8,55 @@
   box-shadow: inset -1px -1px #0a0a0a,inset 1px 1px #c8c8c8,inset -2px -2px grey,inset 2px 2px #fff;
 }
 
+/* TODO: Fix the Z-index mess that is around here :^) */
+.contentContainer {
+  position: relative;
+  display: flex;
+  flex-flow: column;
+  width: 100%;
+  height: 100%;
+}
+
+.contentContainer.focused {
+  z-index: 101;
+}
+
+/* TODO: Use px instead of variable sizing, so there is a more consistent experience */
+.resizable {
+  position: absolute;
+  top: -1%;
+  left: -1%;
+  width: 102%;
+  height: 102%;
+  z-index: 100;
+}
+
+.focusLayer {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  display: block;;
+  top: 0;
+  left: 0;
+  z-index: 100; /* TODO: Make this dynamic */
+}
+
+.focused.header {
+  background-color: aquamarine;
+}
+
 .header {
-  
+  background-color: hotpink;
+  flex: 0 1 auto;
+
+  height: 30px;
 }
 
 .content {
-  display: block;
-  width: 100%;
-  height: 100%;
+  box-sizing: content-box;
+  height: (100% - 6px); /* TODO: Find a cleaner solution than this */
+  width: (100% - 6px);
+
+  flex: 1 1 auto;
+  margin: 3px;
 }
