--- a/apps/desktop/styles/Desktop.module.css
+++ b/apps/desktop/styles/Desktop.module.css
@@ -17,11 +17,13 @@
 }
 
 .desktop {
-  background-color: green;
+  background-color: white;
   display: block;
 
   flex: 1 1 auto;
   width: 100%;
+
+  overflow: hidden;
 }
 
 .dock {
