--- a/apps/desktop/styles/Desktop.module.css
+++ b/apps/desktop/styles/Desktop.module.css
@@ -5,7 +5,6 @@
   height: 100vh;  
   display: flex;
   flex-flow: column;
-  position: relative;
   overflow: hidden;
 }
 
@@ -16,7 +15,8 @@
   flex: 0 1 auto;
 }
 
-.desktop {
+.windowContainer {
+  position: relative;
   background-color: white;
   display: block;
 
@@ -27,12 +27,14 @@
 }
 
 .dock {
-  position: absolute;
+  
   display: block;
   background-color: blue;
 
   height: 40px;
   width: 100%;
+
+  flex: 0 1 auto;
 
   bottom: 0;
 }
