--- a/apps/desktop/styles/WindowContainer.module.css
+++ b/apps/desktop/styles/WindowContainer.module.css
@@ -22,13 +22,12 @@
   z-index: 101;
 }
 
-/* TODO: Use px instead of variable sizing, so there is a more consistent experience */
 .resizable {
   position: absolute;
-  top: -1%;
-  left: -1%;
-  width: 102%;
-  height: 102%;
+  top: -5px;
+  left: -5px;
+  width: calc(100% + 10px);
+  height: calc(100% + 10px);
   z-index: 100;
   user-select: none;
 }
