--- a/apps/desktop/components/Icons/DesktopIcon.module.css
+++ b/apps/desktop/components/Icons/DesktopIcon.module.css
@@ -1,7 +1,9 @@
 .container {
+  position: absolute;
   display: flex;
   flex-direction: column;
   width: 120px;
+  min-height: 80px;
   justify-content: center;
 }
 
