Very basic selection box

--- a/apps/desktop/components/Folder/FolderView.module.css
+++ b/apps/desktop/components/Folder/FolderView.module.css
@@ -5,3 +5,10 @@
 
   position: relative;
 }
+
+.selectionBox {
+  display: block;
+  position: absolute;
+  background-color: hotpink;
+  opacity: 0.7;
+}
