--- a/apps/desktop/styles/WindowContainer.module.css
+++ b/apps/desktop/styles/WindowContainer.module.css
@@ -36,7 +36,7 @@
   position: absolute;
   width: 100%;
   height: 100%;
-  display: block;;
+  display: block;
   top: 0;
   left: 0;
   z-index: 100; /* TODO: Make this dynamic */
