--- a/apps/desktop/styles/Desktop.module.css
+++ b/apps/desktop/styles/Desktop.module.css
@@ -6,6 +6,7 @@
   display: flex;
   flex-flow: column;
   overflow: hidden;
+  position: relative;
 }
 
 .menuBar {
@@ -27,7 +28,6 @@
 }
 
 .dock {
-  
   display: block;
   background-color: blue;
 
