--- a/apps/desktop/components/Folder/FolderView.module.css
+++ b/apps/desktop/components/Folder/FolderView.module.css
@@ -4,7 +4,6 @@
   display: block;
 
   position: relative;
-  overflow: hidden;
 }
 
 .selectionBox {
@@ -13,4 +12,20 @@
   background-color: hotpink;
   opacity: 0.7;
   z-index: 1000;
+}
+
+.iconsContainer {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  overflow: auto;
+}
+
+.selectionBoxContainer {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+
+  overflow: hidden;
+  user-select: none;
 }
