Fixed the browser container for iOS Safari

--- a/apps/desktop/styles/Desktop.module.css
+++ b/apps/desktop/styles/Desktop.module.css
@@ -2,7 +2,8 @@
   margin: 0;
   padding: 0;
   width: 100vw;
-  height: 100vh;  
+  height: 100vh;
+  height: -webkit-fill-available;
   display: flex;
   flex-flow: column;
   overflow: hidden;
