Added hack to only use -webkit-fill-available on Safari

--- a/apps/desktop/components/Folder/FolderView.module.css
+++ b/apps/desktop/components/Folder/FolderView.module.css
@@ -1,11 +1,18 @@
 .folder {
   width: 100%;
   height: 100%;
-  height: -webkit-fill-available;
   display: block;
 
   position: relative;
 }
+
+@supports (-webkit-touch-callout: none) {
+  /* Hack to have Safari use -webkit-fill-available, and chrome use the default height */
+  .folder {
+    height: -webkit-fill-available;
+  }
+}
+
 
 .selectionBox {
   display: block;
