--- a/apps/desktop/styles/Desktop.module.css
+++ b/apps/desktop/styles/Desktop.module.css
@@ -3,11 +3,17 @@
   padding: 0;
   width: 100vw;
   height: 100vh;
-  height: -webkit-fill-available;
   display: flex;
   flex-flow: column;
   overflow: hidden;
   position: relative;
+}
+
+@supports (-webkit-touch-callout: none) {
+  /* Hack to have Safari use -webkit-fill-available, and chrome use the default height */
+  .operatingSystem {
+    height: -webkit-fill-available;
+  }
 }
 
 .menuBar {
