Limit the window title length & changed the breadcrumbs to not overflow

--- a/apps/desktop/applications/Finder/FinderView.module.css
+++ b/apps/desktop/applications/Finder/FinderView.module.css
@@ -29,6 +29,14 @@
   background-color: hotpink;
   height: 30px;
   width: 100%;
+  overflow-y: hidden;
+  overflow-x: auto;
+  display: flex;
+  flex-direction: row;
+}
+
+.breadcrumb {
+  display: inline-block;
 }
 
 .folder {
