--- a/apps/desktop/styles/WindowContainer.module.css
+++ b/apps/desktop/styles/WindowContainer.module.css
@@ -89,11 +89,14 @@
 }
 
 .headerTitle {
-  flex-grow: 1;;
+  flex-grow: 1;
+  overflow: hidden;
+  text-overflow: ellipsis;
 }
 
 .headerButtons {
   display: inline-block;
+  flex-shrink: 0;
 }
 
 .headerButtons button {
