--- a/apps/desktop/styles/Desktop.module.css
+++ b/apps/desktop/styles/Desktop.module.css
@@ -1,7 +1,9 @@
 .operatingSystem {
   margin: 0;
   padding: 0;
+  width: 100dvw;
   width: 100vw;
+  height: 100dvh;
   height: 100vh;
   display: flex;
   flex-flow: column;
