More CSS changes

--- a/apps/desktop/applications/About/AboutView.module.css
+++ b/apps/desktop/applications/About/AboutView.module.css
@@ -24,7 +24,8 @@
 
 .page-h1 {
   font-family: 'Century Schoolbook', sans-serif;
-  font-weight: 2rem;
+  font-weight: normal;
+  font-size: 2rem;
 }
 
 .logo-part {
