Dock styling changes

--- a/apps/desktop/components/MenuBar.module.css
+++ b/apps/desktop/components/MenuBar.module.css
@@ -3,7 +3,7 @@
   display: flex;
   padding: 0 5px;
   flex: 0 1 auto;
-  line-height: 40px;
+  height: 45px;
   box-shadow: inset -1px -1px #0a0a0a,inset 1px 1px #c8c8c8,inset -2px -2px grey,inset 2px 2px #fff;
 }
 
@@ -33,9 +33,10 @@
 
 .menuEntry {
   position: relative;
-  display: block;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
   height: 100%;
-  cursor: pointer;
   padding: 0 8px;
 }
 
