--- a/apps/desktop/components/Dock/Dock.module.css
+++ b/apps/desktop/components/Dock/Dock.module.css
@@ -42,6 +42,8 @@
   width: 200px;
   transform: translateX(-50%);
   content: attr(data-tooltip);
+  color: #000;
+  text-decoration: none;
 }
 
 .dock-application .dock-app-image {
