--- a/apps/desktop/components/Folder/FolderView.module.css
+++ b/apps/desktop/components/Folder/FolderView.module.css
@@ -6,7 +6,7 @@
   position: relative;
 }
 
-.selectionBox {
+.selection-box {
   display: block;
   position: absolute;
   background-color: rgba(105, 205, 249, 0.2);
@@ -14,18 +14,18 @@
   z-index: 1000;
 }
 
-.iconsContainer {
+.icons-container {
   position: absolute;
   width: 100%;
   height: 100%;
   overflow: auto;
 }
 
-.iconsContainer.hideOverflow {
+.icons-container.hide-overflow {
   overflow: hidden;
 }
 
-.selectionBoxContainer {
+.selection-box-container {
   position: absolute;
   width: 100%;
   height: 100%;
