--- a/apps/web/components/renderer/Renderer.module.css
+++ b/apps/web/components/renderer/Renderer.module.css
@@ -6,16 +6,15 @@
   overflow: hidden;
 }
 
-.cssOutput,
-.webglOutput,
-.hoverEffects {
+.mute-button {
+  position: fixed;
+  z-index: 1000;
+}
+
+.css-output,
+.webgl-output {
   position: absolute;
   user-select: none;
   top: 0;
   left: 0;
-}
-
-.hoverEffects {
-  width: 100%;
-  height: 100%;
 }
