--- a/apps/desktop/styles/WindowContainer.module.css
+++ b/apps/desktop/styles/WindowContainer.module.css
@@ -92,11 +92,11 @@
   text-overflow: ellipsis;
 }
 
-.headerButtons {
+.header-buttons {
   display: inline-block;
   flex-shrink: 0;
 }
 
-.headerButtons button {
+.header-buttons button {
   margin-left: 1px;
 }
