--- a/apps/desktop/styles/globals.css
+++ b/apps/desktop/styles/globals.css
@@ -19,8 +19,8 @@ html, body {
   box-sizing: border-box;
 }
 
-.systemButton, .system-button,
-.headerButton, .header-button {
+.system-button,
+.header-button {
   border-radius: 0;
   line-height: 15px;
   padding: 5px;
@@ -33,23 +33,23 @@ html, body {
   cursor: pointer;
 }
 
-.headerButton, .header-button {
+.header-button {
   line-height: 13px;
   padding: 3px 4px 3px;
 }
 
-.systemButton img, .system-button img,
-.headerButton img, .header-button img {
+.system-button img,
+.header-button img {
   user-select: none;
 }
 
-.systemButton:hover, .system-button:hover,
-.headerButton:hover, .header-button:hover {
+.system-button:hover,
+.header-button:hover {
   background-color: #c9c9c9;
 }
 
-.systemButton:active, .system-button:active,
-.headerButton:active, .header-button:active {
+.system-button:active,
+.header-button:active {
   background-color: #dcdcdc;
   box-shadow: inset -1px -1px #fff,inset 1px 1px #535353,inset -2px -2px #dfdfdf,inset 2px 2px grey
 }
