--- a/apps/desktop/styles/globals.css
+++ b/apps/desktop/styles/globals.css
@@ -33,6 +33,13 @@ html, body {
   cursor: pointer;
 }
 
+.system-text-input {
+  outline: none;
+  padding: 3px;
+  box-shadow: inset -1px -1px #fff,inset 1px 1px grey,inset -2px -2px #dfdfdf,inset 2px 2px #0a0a0a;
+  background-color: #fff;
+}
+
 .header-button {
   line-height: 13px;
   padding: 3px 4px 3px;
