--- a/apps/desktop/styles/globals.css
+++ b/apps/desktop/styles/globals.css
@@ -35,8 +35,8 @@ html, body {
 
 .system-text-input {
   outline: none;
-  padding: 5px;
-  box-shadow: inset -1px -1px #fff,inset 1px 1px grey,inset -2px -2px #dfdfdf,inset 2px 2px #0a0a0a;
+  padding: 4px 5px;
+  box-shadow: inset -1px -1px #fff,inset 1px 1px grey,inset -1px -1px #dfdfdf,inset 1px 1px #0a0a0a;
   background-color: #fff;
 }
 
