When over a dock item that supports dropping the file, show the title of the dock item

--- a/apps/desktop/components/Dock/Dock.module.css
+++ b/apps/desktop/components/Dock/Dock.module.css
@@ -35,7 +35,8 @@
   margin: 0 4px;
 }
 
-.dock-application:hover::after {
+.dock-application:hover::after,
+.dock-application.hovered::after {
   position: absolute;
   top: -25px;
   left: 50%;
