--- a/apps/desktop/applications/Finder/FinderView.module.css
+++ b/apps/desktop/applications/Finder/FinderView.module.css
@@ -26,13 +26,13 @@
 }
 
 .path {
-  background-color: hotpink;
   height: 30px;
   width: 100%;
   overflow-y: hidden;
   overflow-x: auto;
   display: flex;
   flex-direction: row;
+  border-bottom: 1px solid #000;
 }
 
 .breadcrumb {
