--- a/apps/desktop/styles/globals.css
+++ b/apps/desktop/styles/globals.css
@@ -31,6 +31,7 @@ html, body {
   box-shadow: inset -1px -1px #535353,inset 1px 1px #fff,inset -2px -2px grey,inset 2px 2px #dfdfdf;
   user-select: none;
   cursor: pointer;
+  white-space: nowrap;
 }
 
 .system-button img {
