--- a/apps/desktop/styles/globals.css
+++ b/apps/desktop/styles/globals.css
@@ -9,10 +9,18 @@
   src: local('Century Schoolbook'), url('/fonts/century_schoolbook.ttf') format('truetype');
 }
 
+@font-face {
+  font-family: 'Noto Serif Toto';
+  font-style: sans-serif;
+  font-weight: normal;
+  src: local('Noto Serif Toto'), url('/fonts/noto_serif_toto.ttf') format('truetype');
+}
+
 html, body {
   padding: 0;
   margin: 0;
   overscroll-behavior: none;
+  font-family: 'Noto Serif Toto', sans-serif;
 }
 
 *, *::before, *::after {
@@ -32,6 +40,7 @@ html, body {
   user-select: none;
   cursor: pointer;
   white-space: nowrap;
+  font-family: 'Noto Serif Toto', sans-serif;
 }
 
 .system-button img {
