--- a/apps/desktop/styles/globals.css
+++ b/apps/desktop/styles/globals.css
@@ -20,7 +20,7 @@ html, body {
   padding: 0;
   margin: 0;
   overscroll-behavior: none;
-  font-family: 'Noto Serif Toto', sans-serif;
+  font-family: 'Noto Serif Toto', 'Times New Roman', sans-serif;
 }
 
 *, *::before, *::after {
@@ -54,6 +54,8 @@ html, body {
   padding: 4px 5px;
   box-shadow: inset -1px -1px #fff,inset 1px 1px grey,inset -1px -1px #dfdfdf,inset 1px 1px #0a0a0a;
   background-color: #fff;
+  font-size: 0.8rem;
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif
 }
 
 .system-text-input:disabled {
