Use a font for the text on the home page
Its the same font as my old portfolio website, as a throwback

--- a/apps/web/styles/globals.css
+++ b/apps/web/styles/globals.css
@@ -10,3 +10,17 @@ html, body {
 #__next {
   height: 100vh;
 }
+
+@font-face {
+  font-family: 'Galyon Regular';
+  font-style: normal;
+  font-weight: normal;
+  src: local('Galyon Regular'), url('/fonts/Galyon-Regular.woff') format('woff');
+}
+
+@font-face {
+  font-family: 'Galyon Bold';
+  font-style: normal;
+  font-weight: normal;
+  src: local('Galyon Bold'), url('/fonts/Galyon-Bold.woff') format('woff');
+}
