--- a/apps/web/components/renderer/RendererUI.module.css
+++ b/apps/web/components/renderer/RendererUI.module.css
@@ -14,6 +14,8 @@
   opacity: 0;
   pointer-events: none;
   transition: opacity 100ms ease-in;
+  font-family: 'Galyon Bold';
+  text-transform: uppercase;
 }
 
 .name-container span {
@@ -37,6 +39,8 @@
   pointer-events: none;
   transition: opacity 100ms ease-in;
   opacity: 1;
+  font-family: 'Galyon Bold';
+  text-transform: uppercase;
 }
 
 .fade-out {
