--- a/apps/web/components/renderer/RendererUI.module.css
+++ b/apps/web/components/renderer/RendererUI.module.css
@@ -12,7 +12,7 @@
   display: flex;
   flex-direction: column;
   opacity: 0;
-  pointer-events: none;
+  /* pointer-events: none; */
   transition: opacity 100ms ease-in;
   font-family: 'Galyon Bold';
   text-transform: uppercase;
@@ -25,6 +25,7 @@
   background-color: #000;
   color: #fff;
   font-size: 1.2rem;
+  line-height: 1.2rem;
 }
 
 .cinematic-instructions {
@@ -49,4 +50,20 @@
 
 .fade-in {
   opacity: 1;
+}
+
+.mute-button {
+  border: none;
+  background-color: #000;
+  pointer-events: all;
+  padding: 0;
+  margin: 3px 1px;
+  /* padding: 8px 20px; */
+  height: 19.8px;
+  cursor: pointer;
+}
+
+.mute-button img {
+  padding: 0;
+  margin: 0;
 }
