--- a/apps/web/components/renderer/RendererUI.module.css
+++ b/apps/web/components/renderer/RendererUI.module.css
@@ -12,7 +12,7 @@
   display: flex;
   flex-direction: column;
   opacity: 0;
-  /* pointer-events: none; */
+  pointer-events: none;
   transition: opacity 100ms ease-in;
   font-family: 'Galyon Bold';
   text-transform: uppercase;
@@ -26,15 +26,18 @@
   color: #fff;
   font-size: 1.2rem;
   line-height: 1.2rem;
-float: left;
+  float: left;
+}
+
+.cinematic-container {
+  position: fixed;
+  bottom: 25%;
+  width: 100%;;
+  text-align: center;
 }
 
 .cinematic-instructions {
-  position: fixed;
-  bottom: 25%;
   font-size: 1.2rem;
-  left: 50%;
-  transform: translateX(-50%);
   background-color: #000;
   padding: 8px 20px;
   color: #fff;
@@ -69,4 +72,12 @@ float: left;
   display: block;
   padding: 0;
   margin: 0;
+}
+
+.time-is-done {
+  width: 115px;
+}
+
+.sound-container {
+  margin: 5px;
 }
