--- a/apps/web/components/renderer/RendererUI.module.css
+++ b/apps/web/components/renderer/RendererUI.module.css
@@ -15,13 +15,12 @@
   flex-direction: column;
   opacity: 0;
   pointer-events: none;
-  font-family: 'Galyon Bold';
-  text-transform: uppercase;
+  font-family: 'Metropolis Medium';
 }
 
 .name-container span {
   display: block;
-  padding: 8px 20px;
+  padding: 10px 20px;
   margin: 3px 5px 1px;
   background-color: #000;
   color: #fff;
@@ -40,12 +39,11 @@
 .cinematic-instructions {
   font-size: 1.2rem;
   background-color: #000;
-  padding: 8px 20px;
+  padding: 10px 20px;
   color: #fff;
   pointer-events: none;
   opacity: 1;
-  font-family: 'Galyon Bold';
-  text-transform: uppercase;
+  font-family: 'Metropolis Medium';
 }
 
 .fade-out {
@@ -64,7 +62,7 @@
   padding: 0;
   margin: 3px 5px 1px;
   line-height: 40px;
-  padding: 8px 10px;
+  padding: 10px 10px;
   cursor: pointer;
 }
 
