--- a/apps/web/components/scene-loader/SceneLoader.module.css
+++ b/apps/web/components/scene-loader/SceneLoader.module.css
@@ -9,6 +9,16 @@
   padding: 10px;
 }
 
+.loading-underscore {
+  position: absolute;
+  z-index: 110;
+  width: 100%;
+  height: 100%;
+  color: #fff;
+  background-color: #000;
+  padding: 10px;
+}
+
 .loading-progress h3 {
   margin: 0;
   padding: 0;
@@ -28,6 +38,7 @@
   margin: 0;
   padding: 0;
 }
+
 .error-container p {
   padding: 0;
   margin: 0;
@@ -61,7 +72,7 @@
 .user-message-container {
   width: 100%;
   max-width: 500px;
-  border: 10px solid #fff;
+  border: 4px solid #fff;
   padding: 12px;
 }
 
@@ -70,19 +81,24 @@
   margin: 0 0 10px;
 }
 
-.user-message-container span {
+.user-message-container p {
   display: block;
   margin: 0 0 20px;
 }
 
 .user-message-container button {
   display: block;
-  border: 5px solid #fff;
+  border: 2px solid #fff;
   padding: 8px;
   background: #000;
   color: #fff;
   font-family: monospace;
   cursor: pointer;
+}
+
+.continue-text {
+  line-height: 20px;
+  float: left;
 }
 
 .user-message-container button:hover,
@@ -95,4 +111,18 @@
   display: flex;
   justify-content: center;
   width: 100%;
+}
+
+.blinking-cursor {
+  display: inline-block;
+  height: 1.2em;
+  width: 0.8em;
+  position: relative;
+  animation: blink 0.65s step-end infinite;
+  margin-left: 0.2em;
+}
+
+@keyframes blink {
+  0%, 100% { background-color: #fff; }
+  50% { background-color: transparent;}
 }
