--- a/apps/web/components/scene-loader/SceneLoader.module.css
+++ b/apps/web/components/scene-loader/SceneLoader.module.css
@@ -5,7 +5,7 @@
   color: #fff;
   font-family: monospace;
   user-select: none;
-  font-size: 1.2rem;
+  font-size: 1em;
   padding: 10px;
 }
 
@@ -125,4 +125,12 @@
 @keyframes blink {
   0%, 100% { background-color: #fff; }
   50% { background-color: transparent;}
+}
+
+@media screen and (max-width: 500px) {
+  .loading-progress { font-size: 0.8em; }
+}
+
+@media screen and (max-width: 800px) {
+  .loading-progress { font-size: 1em; }
 }
