--- a/apps/web/components/renderer/RendererUI.module.css
+++ b/apps/web/components/renderer/RendererUI.module.css
@@ -85,6 +85,20 @@
   opacity: 1;
 }
 
+.blinking-cursor {
+  display: inline-block;
+  height: 0.2em;
+  width: 0.8em;
+  position: relative;
+  animation: blink 0.65s step-end infinite;
+  margin-left: 0.2em;
+}
+
+@keyframes blink {
+  0%, 100% { background-color: #fff; }
+  50% { background-color: transparent;}
+}
+
 @keyframes fade-out {
   0% { opacity: 1; visibility: visible; }
   100% { opacity: 0; visibility: hidden; }
