--- a/apps/desktop/styles/globals.css
+++ b/apps/desktop/styles/globals.css
@@ -45,10 +45,11 @@ html, body {
 
 .system-text-input {
   -webkit-appearance: none;
+  border: none;
   outline: none;
   border-radius: 0;
-  padding: 4px 5px;
-  box-shadow: inset -1px -1px #fff,inset 1px 1px grey,inset -1px -1px #dfdfdf,inset 1px 1px #0a0a0a;
+  padding: 5px 6px;
+  box-shadow: inset -1px -1px #fff, inset 1px 1px grey, inset -2px -2px #dfdfdf, inset 2px 2px #0a0a0a;
   background-color: #fff;
   font-size: 0.8rem;
   font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif
