--- a/apps/desktop/applications/Contract/ContactView.module.css
+++ b/apps/desktop/applications/Contract/ContactView.module.css
@@ -73,3 +73,46 @@
 .required-instructions span {
   display: inline-block;
 }
+
+.contact-info {
+  margin: 0;
+}
+
+.contact-header {
+  display: flex;
+  justify-content: space-between;
+
+  margin: 1rem 0;
+}
+
+.contact-header h1 {
+  margin: 0;
+}
+
+.contact-socials {
+  display: flex;
+}
+
+.contact-socials a {
+  padding: 10px;
+  margin: 2px;
+  display: block;
+  height: 100%;
+  height: 22px;
+  box-sizing: content-box;
+  background-color: #dcdcdc;
+  box-shadow: inset -1px -1px #0a0a0a,inset 1px 1px #c8c8c8,inset -2px -2px grey,inset 2px 2px #fff;
+}
+
+.contact-socials a img {
+  user-select: none;
+}
+
+.contact-socials a:hover {
+  background-color: #c9c9c9;
+}
+
+.contact-socials a:active {
+  background-color: #dcdcdc;
+  box-shadow: inset -1px -1px #fff,inset 1px 1px #535353,inset -2px -2px #dfdfdf,inset 2px 2px grey;
+}
