--- a/apps/desktop/applications/About/AboutView.module.css
+++ b/apps/desktop/applications/About/AboutView.module.css
@@ -78,3 +78,39 @@
   margin-left: 0.25rem;
   margin-right: 0.25rem;
 }
+
+.projects-subview h2 {
+  margin-top: 1rem;
+}
+
+.projects-subview ul {
+  list-style: none;
+  padding: 0;
+  margin: 0;
+}
+
+
+.project-button {
+  border-radius: 0;
+  line-height: 22px;
+  margin-top: 0.5rem;
+  padding: 10px 15px;
+  border: none;
+  color: #000;
+  background-color: #dcdcdc;
+  font-size: 1.05em;
+  box-shadow: inset -1px -1px #535353,inset 1px 1px #fff,inset -2px -2px grey,inset 2px 2px #dfdfdf;
+  user-select: none;
+  cursor: pointer;
+  white-space: nowrap;
+  font-family: 'Noto Serif Toto', sans-serif;
+}
+
+.project-button:hover {
+  background-color: #c9c9c9;
+}
+
+.project-button:active {
+  background-color: #dcdcdc;
+  box-shadow: inset -1px -1px #fff,inset 1px 1px #535353,inset -2px -2px #dfdfdf,inset 2px 2px grey
+}
