--- a/apps/desktop/applications/About/AboutView.module.css
+++ b/apps/desktop/applications/About/AboutView.module.css
@@ -113,3 +113,18 @@
   background-color: #dcdcdc;
   box-shadow: inset -1px -1px #fff,inset 1px 1px #535353,inset -2px -2px #dfdfdf,inset 2px 2px grey
 }
+
+.button-link {
+  border: none;
+  padding: 0;
+  margin: 0;
+  display: inline-block;
+  color: blue;
+  background: none;
+  cursor: pointer;
+  text-align: left;
+}
+
+.button-link:hover {
+  text-decoration: underline;
+}
