--- a/apps/web/components/renderer/RendererUI.module.css
+++ b/apps/web/components/renderer/RendererUI.module.css
@@ -21,7 +21,7 @@
 .name-container span {
   display: block;
   padding: 10px 20px;
-  margin: 3px 5px 1px;
+  margin: 3px 0px 1px 5px;
   background-color: #000;
   color: #fff;
   font-size: 1.2rem;
@@ -55,19 +55,21 @@
   animation: fade-in 100ms forwards;
 }
 
-.mute-button {
-  display: block;
+.mute-button,
+.camera-button {
+  display: inline-block;
   border: none;
   background-color: #000;
   pointer-events: all;
   padding: 0;
-  margin: 3px 5px 1px;
+  margin: 3px 0px 1px 5px;
   line-height: 40px;
   padding: 10px 10px;
   cursor: pointer;
 }
 
-.mute-button img {
+.mute-button img,
+.camera-button img {
   display: block;
   padding: 0;
   margin: 0;
