--- a/apps/desktop/applications/About/AboutView.module.css
+++ b/apps/desktop/applications/About/AboutView.module.css
@@ -167,3 +167,23 @@
 .download-content h2 {
   margin: 0;
 }
+
+.image-container {
+  display: block;
+  float: right;
+  width: 33%;
+  padding: 5px;
+  margin: 5px;
+  background-color: silver;
+  box-shadow: inset -1px -1px #0a0a0a, inset 1px 1px #c8c8c8, inset -2px -2px grey, inset 2px 2px #fff;
+}
+
+.image-container img {
+  width: 100%;
+}
+
+.image-container span {
+  width: 100%;
+  text-align: center;
+  display: block;
+}
