--- a/apps/desktop/components/Dock/Dock.module.css
+++ b/apps/desktop/components/Dock/Dock.module.css
@@ -49,7 +49,6 @@
 
 .dock-application .dock-app-image {
   display: block;
-  max-height: calc(100% - 12px);
 }
 
 .dock-app-active-image {
@@ -61,9 +60,9 @@
   display: flex;
   justify-content: center;
   padding-top: 2px;
+  padding-bottom: 2px;
   height: 12px;
   width: 100%;
-  /* background: blue; */
 }
 
 .separator {
