--- a/apps/web/components/scene-loader/SceneLoader.module.css
+++ b/apps/web/components/scene-loader/SceneLoader.module.css
@@ -14,6 +14,10 @@
   overflow: hidden;
 }
 
+.loading-progress a {
+  color: lightblue;
+}
+
 .loading-underscore {
   position: absolute;
   z-index: 110;
